Increase left and right page padding

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body {
 .footer {
     background-color: #1f2937;
     display: flex;
-    
     align-items: center;
 }
 
@@ -20,7 +19,7 @@ body {
 .info-container,
 .quote-container,
 .signup-container {
-    padding: 0px 180px;
+    padding: 0px 300px;
 }
 
 .header {
@@ -71,7 +70,7 @@ body {
 .home-subtext {
     color: #e5e7eb;
     margin: 0px;
-    padding-right: 150px;
+    padding-right: 250px;
     padding-top: 5px;
     padding-bottom: 5px;
 }
@@ -90,12 +89,12 @@ button.home-signup {
 .img-placeholder {
     font-size: 18px;
     color: #f9faf8;
-    background-color: #878787;
+    background-color: #6d747d;
     display: flex;
     flex: 1;
     justify-content: center;
     align-items: center;
-    height: 170px;
+    height: 230px;
     width: auto;
 }
 
